--- a/recherches-graphiques/index.html
+++ b/recherches-graphiques/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 
-	<body id="connexion">
+	<body id="formulaire">
 
 		<header>
 			<section id="header">
@@ -19,11 +19,11 @@
 
 		</header>
 		
-		<section id="connexion_container">
+		<section id="formulaire_container">
 			<div id="signup">
 				<form>
 					<header>
-						<p> S'inscrire</p>
+						<p> Inscription</p>
 					</header>
 
 					<input type="text" name="pseudo" placeholder="Votre pseudo">
@@ -31,25 +31,42 @@
 					<input type="email" name="email_2" placeholder="Confirmer votre email">
 					<input type="password" name="pwd_1" placeholder="Votre password">
 					<input type="password" name="pwd_2" placeholder="Confirmer votre password">
-					<input type="submit" value="m'inscrire">
+					<input type="submit" value="valider">
 				</form>
 			</div>
 
 			<div id="signin">
 				<form>
 					<header>
-						<p> Se connecter</p>
+						<p>Connexion</p>
 					</header>
 
 					<input type="text" name="pseudo" placeholder="Pseudo / Email">
 					<input type="password" name="pwd_1" placeholder="Votre password">
 					<input type="submit" value="me connecter">
 				</form>
-				<p id="forget">Vous avez oublié votre password ? <a href="" class="forget_click">> cliquez ici <</a></p>
-				
 			</div>
-			
+
+			<div id="oublie">
+				<p id="forget">Vous avez oublié votre login / password ? <a href="" class="forget_click">> cliquez ici </a></p>
+			</div>	
+
+
+			<div id="remember">
+				<form>
+					<input type="email" name="email_1" placeholder="Votre email">
+					<input type="submit" value="">
+				</form>
+			</div>
+	
 		</section>
+
+
+		<footer>
+			<div>
+				<p>&copy; Copyright APC.Web | Kiwimagine - <?php echo date("Y");?></p>
+			</div>
+		</footer>
 	</body>
 
 </html>
