update Cyril Profil

--- a/recherches-graphiques/index.html
+++ b/recherches-graphiques/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 
-	<body id="connexion">
+	<body id="formulaire">
 
 		<header>
 			<section id="header">
@@ -19,7 +19,7 @@
 
 		</header>
 		
-		<section id="connexion_container">
+		<section id="formulaire_container">
 			<div id="signup">
 				<form>
 					<header>
