--- a/recherches-graphiques/ficheprofil.html
+++ b/recherches-graphiques/ficheprofil.html
@@ -61,13 +61,48 @@
 
 		<div id="infos_profil" class="container">
 
-			<div class="left" id="profil_img">
-				<img src="../img/avatar_200.jpg">
+			<div id="fiche">
+
+				<div class="left" id="profil_img">
+					<img src="http://www.catsthatlooklikehitler.com/kitler/pics/kitler1927.jpg">
+					<div id="pseudo_profil">Maxthetiger 
+						<div id="status">
+							<span class="in">In</span> | 
+							<span class="out">Out</span>
+						</div>
+					</div>
+					<div id="score">
+							5,376
+					</div>
+					<div class="infos_small" id="location">Paris, France</div>
+					<div class="infos_small">Mangeur de Gauffre</div>
+
+					<div class="urls">
+						<span class="link">Github :</span>
+						<span class="link_url">http://blablacar.com</span>
+					</div>	
+					<div class="urls">
+						<span class="link">Website :</span>
+						<span class="link_url">http://www.maxthetiger.com</span>
+					</div>
+				</div>
+
+				
+
+				<div class="left" id="profil_info">
+					<header>Description</header>
+					<div>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+
 			</div>
 
-			<div class="left" id="profil_info">
-				eijgipj
-			</div>
 
 
 			<div id="questions" class="left">
